fix: updates tsconfig and index.html to build and serve the app
Adds the `src/tsconfig.app.json` file for building and serving the application. 

Updates the `index.html` for proper DOM loading.

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1d3ff5ce-8856-47f3-ae32-18b480ef9458"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
