--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "angular",
+  "name": "ng-poc-template",
   "version": "0.0.0",
   "private": true,
+  "description": "A template for Angular POCs",
   "dependencies": {
     "@angular/animations": "^10.0.9",
     "@angular/cdk": "10.1.3",
